<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ludogame.SetupActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:text="@string/strSetupPlayers"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp" >

        <GridLayout
            android:id="@+id/redGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="40dp"
            android:columnCount="2" >

            <ImageButton
                android:id="@+id/redPlayerImageButton"
                android:layout_column="1"
                android:layout_gravity="left|bottom"
                android:layout_row="0"
                android:src="@drawable/red_user" />

            <TextView
                android:id="@+id/redPlayerTextView"
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="left"
                android:layout_row="1"
                android:gravity="center"
                android:text="@string/strRedPlayer"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </GridLayout>

        <GridLayout
            android:id="@+id/greenGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView1"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:columnCount="2" >

            <ImageButton
                android:id="@+id/greenPlayerImageButton"
                android:layout_column="1"
                android:layout_gravity="left|top"
                android:layout_row="0"
                android:src="@drawable/green_user" />

            <TextView
                android:id="@+id/greenPlayerTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal|top"
                android:layout_row="1"
                android:gravity="center"
                android:text="@string/strGreenPlayer"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </GridLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="36dp" >

        <GridLayout
            android:id="@+id/GridLayout02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_marginLeft="35dp"
            android:columnCount="2" >

            <ImageButton
                android:id="@+id/yellowPlayerImageButton"
                android:layout_column="1"
                android:layout_gravity="left|bottom"
                android:layout_row="0"
                android:src="@drawable/yellow_user" />

            <TextView
                android:id="@+id/yellowPlayerTextView"
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="left"
                android:layout_row="1"
                android:gravity="center"
                android:text="@string/strYellowPlayer"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </GridLayout>

        <GridLayout
            android:id="@+id/GridLayout01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView1"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="20dp"
            
            android:columnCount="2" >

            <ImageButton
                android:id="@+id/bluePlayerImageButton"
                android:layout_column="1"
                android:layout_gravity="left|top"
                android:layout_row="0"
                android:src="@drawable/blue_user" />

            <TextView
                android:id="@+id/bluePlayerTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal|top"
                android:layout_row="1"
                android:gravity="center"
                android:text="@string/strBluePlayer"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </GridLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp" >

        <Button
            android:id="@+id/startButton"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:text="Start Game" />

    </LinearLayout>

</RelativeLayout>